--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,20 @@
-version: 2.1
+version: 2
 jobs:
   build:
+    working_directory: ~/redux-async
     docker:
-      - image: circleci/node:12.9.1-browsers
-  
-    working_directory: ~/repo
-steps:
+      - image: circleci/node:10
+    steps:
       - checkout
-      
       - restore_cache:
-        keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
-      
-      - run: npm install
-   
+          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install Dependencies
+          command: npm ci
       - save_cache:
-        paths:
-          - node_modules
-        key: v1-dependencies-{{ checksum "package.json" }}
-    
-      - run: npm test
+          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+          paths:
+            - /home/circleci/.npm
+      - run:
+          name: Run Tests
+          command: npm test
