--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,3 +18,15 @@ jobs:
       - run:
           name: Run Tests
           command: npm test
+      - run: # run coverage report
+          name: code-coverage
+          command: 'npm test -- --coverage'
+      # - store_artifacts: # special step to save test results as as artifact
+      #     # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+      #     path: junit.xml
+      #     prefix: tests
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+          path: coverage
+          prefix: coverage
+      # - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+      #     path: junit.xml
