--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.7.0",
     "apollo-boost": "^0.4.4",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
     "graphql": "^14.5.8",
-    "jest-enzyme": "^7.1.2",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "react-test-renderer": "^16.12.0"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +42,11 @@
     "@storybook/addon-links": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
-    "jest-junit": "^9.0.0"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "faker": "^4.1.0",
+    "jest-enzyme": "^7.1.2",
+    "jest-junit": "^9.0.0",
+    "react-test-renderer": "^16.12.0"
   }
 }
