--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "faker": "^4.1.0",
     "graphql": "^14.5.8",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
