--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@storybook/addon-links": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
+    "ajax-request": "^1.2.3",
     "apollo-boost": "^0.4.4",
+    "axios": "^0.19.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "faker": "^4.1.0",
