--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropzone-material-ui": "^0.1.7",
     "react-hook-form": "^3.29.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
