--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-hook-form": "^3.29.2",
     "react-router-dom": "^5.1.2",
