--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-state": "^0.4.2",
+    "apollo-upload-client": "^12.1.0",
     "clsx": "^1.0.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
@@ -22,6 +28,7 @@
     "react": "^16.12.0",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
+    "react-dropzone-material-ui": "^0.1.7",
     "react-hook-form": "^3.29.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
